ref: Refactore code